Update deploy for prosocial app

--- a/deploy/roles/webserver/tasks/deploy.yml
+++ b/deploy/roles/webserver/tasks/deploy.yml
@@ -1,13 +1,13 @@
 - name: Create deployment user
-  user: name=deploy comment="Application deployment user"
+  user: name=prosocial comment="Application deployment user"
 
-- authorized_key: user=deploy key="{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+- authorized_key: user=prosocial key="{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 
 - name: Create deployment directory
-  file: path={{deploy_directory}} owner=deploy group=deploy state=directory
+  file: path={{deploy_directory}} owner=prosocial group=prosocial state=directory
 
 - name: Make shared directories
-  file: path={{deploy_directory}}/shared/{{item}} group=deploy owner=deploy state=directory
+  file: path={{deploy_directory}}/shared/{{item}} group=prosocial owner=prosocial state=directory
   with_items:
     - tmp
     - log
@@ -18,5 +18,5 @@
     - config/puma
   tags: shared
 
-- name: Install database.yml
-  template: src=database.yml.j2 dest={{deploy_directory}}/shared/config/database.yml force=yes mode=755 owner=deploy
+#- name: Install database.yml
+#  template: src=database.yml.j2 dest={{deploy_directory}}/shared/config/database.yml force=yes mode=755 owner=prosocial
