--- a/deploy/roles/webserver/tasks/deploy.yml
+++ b/deploy/roles/webserver/tasks/deploy.yml
@@ -1,13 +1,13 @@
 - name: Create deployment user
-  user: name=prosocial comment="Application deployment user"
+  user: name={{ app_name }} comment="Application deployment user"
 
-- authorized_key: user=prosocial key="{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+- authorized_key: user={{ app_name }} key="{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 
 - name: Create deployment directory
-  file: path={{deploy_directory}} owner=prosocial group=prosocial state=directory
+  file: path={{deploy_directory}} owner={{ app_name }} group={{ app_name }} state=directory
 
 - name: Make shared directories
-  file: path={{deploy_directory}}/shared/{{item}} group=prosocial owner=prosocial state=directory
+  file: path={{deploy_directory}}/shared/{{item}} owner={{ app_name }} group={{ app_name }} state=directory
   with_items:
     - tmp
     - log
@@ -19,4 +19,4 @@
   tags: shared
 
 #- name: Install database.yml
-#  template: src=database.yml.j2 dest={{deploy_directory}}/shared/config/database.yml force=yes mode=755 owner=prosocial
+#  template: src=database.yml.j2 dest={{deploy_directory}}/shared/config/database.yml force=yes mode=755 owner={{ app_name }}
